--- a/app/views/layouts/admin/_header.html.erb
+++ b/app/views/layouts/admin/_header.html.erb
@@ -9,8 +9,8 @@
        <%= link_to("Administradores", admin_admins_path, class: "nav-link") %>
         
       </li>
-       <li class="nav-item">
-      <a class="nav-link" href="#">Usuários</a>
+       <li class="nav-item"<%= current_page?(admin_users_path)? "active" : "" %>">
+      <%= link_to("Usuarios", admin_users_path, class: "nav-link") %>
        
       </li>
       <li class="nav-item">
