--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -16,7 +16,7 @@
     <% @users.each do |user| %>
     <tr>
       <th scope="row"><%= user.id %></th>
-      <td><%= image_tag(user.avatar, class: "ui-w-100-forced rounded-circle", style: "width: 30px: height: 30px") %></td>
+      <td><%= image_tag(user.avatar, class: "ui-w-100-forced rounded-circle", style: "width: 30px; height: 30px") %></td>
       <td><%= user.name %></td>
       <td><%= user.email %></td>
       <td><%= user.phone %></td>
